<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            style="@style/no_connection_iv"
            android:contentDescription="@string/no_connection"
            android:src="@drawable/no_connection" />

        <TextView
            style="@style/no_connection_title_tv"
            android:text="@string/no_connection" />

        <TextView
            style="@style/no_connection_hint_tv"
            android:text="@string/no_connection_hint" />

        <Button
            android:id="@+id/retry_button"
            style="@style/retry_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/retry_button"
            tools:targetApi="lollipop" />
    </LinearLayout>

</ScrollView>