<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
             android:id="@+id/detail_frame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone">



    <RelativeLayout
        style="@style/details_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            style="@style/image_details_fragment"
            android:contentDescription="@string/movie_poster_content_description" />

            <ImageButton
                android:id="@+id/heart_button"
                style="@style/heart_image_button_details_fragment"
                android:contentDescription="@string/no_fav_icon" />

        <LinearLayout
            android:id="@+id/movie_info"
            style="@style/details_linear_layout">

                <TextView
                    android:id="@+id/title_header"
                    style="@style/details_fragment_title_header"
                    android:text="@string/header_title"/>

            <TextView
                android:id="@+id/title_content"
                style="@style/details_fragment_title_content" />

                <TextView
                    android:id="@+id/release_date_header"
                    style="@style/details_fragment_release_date_header"
                    android:text="@string/header_release_date"/>

            <TextView
                android:id="@+id/release_date_content"
                style="@style/details_fragment_release_date_content" />

                <TextView
                    android:id="@+id/vote_average_header"
                    style="@style/details_fragment_vote_average_header"
                    android:text="@string/header_vote_average"/>

            <TextView
                android:id="@+id/vote_average_content"
                style="@style/details_fragment_vote_average_content" />
        </LinearLayout>


            <TextView
                android:id="@+id/overview_header"
                style="@style/details_fragment_overview_header"
                android:text="@string/header_overview"
                />

            <TextView
                android:id="@+id/overview_content"
                style="@style/details_fragment_overview_content"
                />


            <LinearLayout
                android:id="@+id/videos_expandable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview_content"
                android:layout_marginTop="@dimen/movie_info_overview_header_margin_top"
                android:background="@drawable/border"
                android:clickable="true"
                android:orientation="vertical"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/videos_header"
                        style="@style/TextSubHeader"
                        android:layout_toStartOf="@+id/videos_expand_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trailers_title"/>

                    <ImageView
                        android:id="@+id/videos_expand_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/expand_indicator" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/videos_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reviews_expandable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/videos_expandable"
                android:layout_marginTop="@dimen/movie_info_overview_header_margin_top"
                android:background="@drawable/border"
                android:clickable="true"
                android:orientation="vertical"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reviews_header"
                        style="@style/TextSubHeader"
                        android:layout_toStartOf="@+id/reviews_expand_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews_title"/>

                    <ImageView
                        android:id="@+id/reviews_expand_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/expand_indicator" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/reviews_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</ScrollView>